syntax = "proto3";

package tensorflow.serving;

message ModelSelectorSourceAdapterConfig {
    string fileName = 1;
}
